--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/arch/arm/configs/faux_msm8660_defconfig
 #
 # NOTE! Don't add files that are generated in specific
 # subdirectories here. Add them in the ".gitignore" file
