--- a/arch/arm/configs/my_defconfig
+++ b/arch/arm/configs/my_defconfig
@@ -35,7 +35,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-"
+CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -407,8 +407,8 @@ CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1188000
 CONFIG_MSM_CPU_FREQ_MIN=192000
-CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=1188000
-CONFIG_MSM_CPU_FREQ_ONDEMAND_MIN=192000
+CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=384000
+CONFIG_MSM_CPU_FREQ_ONDEMAND_MIN=245760
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -654,6 +654,14 @@ CONFIG_LAGFREE_FREQ_STEP_DOWN=108000
 CONFIG_LAGFREE_FREQ_SLEEP_MAX=384000
 CONFIG_LAGFREE_FREQ_AWAKE_MIN=384000
 CONFIG_LAGFREE_FREQ_STEP_UP_SLEEP_PERCENT=20
+CONFIG_CPU_FREQ_GOV_BADASS=y
+CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE=y
+CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE_FREQ=918000
+CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE=y
+CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE_FREQ=1188000
+CONFIG_CPU_FREQ_GOV_BADASS_GPU_CONTROL=y
+# CONFIG_CPU_FREQ_GOV_BADASS_LOWBAT_POWERSAVE is not set
+# CONFIG_CPU_FREQ_GOV_BADASS_ALLOW_BYPASS is not set
 CONFIG_CPU_FREQ_MIN_TICKS=10
 CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=2000
 CONFIG_CPU_FREQ_GOV_SAVAGEDZEN=y
