--- a/arch/arm/configs/my_defconfig
+++ b/arch/arm/configs/my_defconfig
@@ -17,7 +17,7 @@ CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_GENERIC_LOCKBREAK=y
 CONFIG_ARM_TICKET_LOCKS=y
-CONFIG_RWSEM_GENERIC_SPINLOCK=y
+CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
 CONFIG_GENERIC_HWEIGHT=y
@@ -105,6 +105,7 @@ CONFIG_EXPERT=y
 CONFIG_UID16=y
 # CONFIG_SYSCTL_SYSCALL is not set
 CONFIG_KALLSYMS=y
+# CONFIG_KALLSYMS_ALL is not set
 CONFIG_HOTPLUG=y
 CONFIG_PRINTK=y
 CONFIG_BUG=y
@@ -166,12 +167,14 @@ CONFIG_LBDAF=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_IOSCHED_VR=y
 CONFIG_DEFAULT_DEADLINE=y
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_VR is not set
 CONFIG_DEFAULT_IOSCHED="deadline"
@@ -405,7 +408,7 @@ CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_MPDEC is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1188000
+CONFIG_MSM_CPU_FREQ_MAX=1512000
 CONFIG_MSM_CPU_FREQ_MIN=192000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=384000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MIN=245760
@@ -638,6 +641,12 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAZY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SAVAGEDZEN is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SCARY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -665,6 +674,13 @@ CONFIG_CPU_FREQ_GOV_BADASS_GPU_CONTROL=y
 CONFIG_CPU_FREQ_MIN_TICKS=10
 CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=2000
 CONFIG_CPU_FREQ_GOV_SAVAGEDZEN=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+CONFIG_CPU_FREQ_GOV_SCARY=y
+CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
+CONFIG_CPU_FREQ_DVFS_MONITOR=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
@@ -1100,6 +1116,8 @@ CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_EXTRA_FIRMWARE=""
+# CONFIG_DEBUG_DRIVER is not set
+# CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
 CONFIG_GENLOCK=y
 CONFIG_GENLOCK_MISCDEVICE=y
@@ -1577,6 +1595,7 @@ CONFIG_I2C_SSBI=y
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
 CONFIG_SPI=y
+# CONFIG_SPI_DEBUG is not set
 CONFIG_SPI_MASTER=y
 
 #
@@ -1619,6 +1638,7 @@ CONFIG_SPI_SPIDEV=m
 #
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
 CONFIG_GPIOLIB=y
+# CONFIG_DEBUG_GPIO is not set
 # CONFIG_GPIO_SYSFS is not set
 
 #
@@ -2360,6 +2380,7 @@ CONFIG_USB_STORAGE_CYPRESS_ATACB=y
 # CONFIG_USB_QCOM_DIAG_BRIDGE is not set
 # CONFIG_USB_QCOM_MDM_BRIDGE is not set
 CONFIG_USB_GADGET=y
+# CONFIG_USB_GADGET_DEBUG is not set
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
 # CONFIG_USB_GADGET_DEBUG_FS is not set
 CONFIG_USB_GADGET_VBUS_DRAW=2
@@ -2431,6 +2452,7 @@ CONFIG_USB_MSM_STANDARD_ACA=y
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
 CONFIG_MMC_PERF_PROFILING=y
+# CONFIG_ZIMMER is not set
 # CONFIG_MMC_DISABLE_WP_RFG_5 is not set
 CONFIG_MMC_UNSAFE_RESUME=y
 # CONFIG_MMC_CLKGATE is not set
