some add, some remove
bt:add BT_SOC, BT_RFCOMM, BT_BNEP, BT_HCIUART
scsi: removed
sweep2wake: removed

--- a/arch/arm/configs/my_defconfig
+++ b/arch/arm/configs/my_defconfig
@@ -294,7 +294,9 @@ CONFIG_MSM_MPM=y
 CONFIG_MSM_XO=y
 CONFIG_MSM_REMOTE_SPINLOCK_LDREX=y
 CONFIG_MSM_ADM3=y
-# CONFIG_PERFLOCK is not set
+CONFIG_PERFLOCK=y
+CONFIG_PERFLOCK_BOOT_LOCK=y
+# CONFIG_PERFLOCK_SCREEN_POLICY is not set
 
 #
 # MSM Board Selection
@@ -373,7 +375,7 @@ CONFIG_CPU_HAS_L2_PMU=y
 # CONFIG_HTC_BATTCHG is not set
 # CONFIG_HTC_BATTCHG_MAX8957 is not set
 # CONFIG_HTC_PWRSINK is not set
-# CONFIG_BUILD_OMA_DM is not set
+CONFIG_BUILD_OMA_DM=y
 # CONFIG_MSM_FIQ_SUPPORT is not set
 # CONFIG_MSM_SERIAL_DEBUGGER is not set
 # CONFIG_MSM_PROC_COMM is not set
@@ -410,8 +412,6 @@ CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1512000
 CONFIG_MSM_CPU_FREQ_MIN=192000
-CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=384000
-CONFIG_MSM_CPU_FREQ_ONDEMAND_MIN=245760
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -601,6 +601,7 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 # CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
+CONFIG_ALLOW_CPU_ALIGNMENT=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
 # CONFIG_SECCOMP is not set
 # CONFIG_CC_STACKPROTECTOR is not set
@@ -1058,9 +1059,12 @@ CONFIG_RPS=y
 # CONFIG_IRDA is not set
 CONFIG_BT=y
 CONFIG_BT_L2CAP=y
-# CONFIG_BT_SCO is not set
-# CONFIG_BT_RFCOMM is not set
-# CONFIG_BT_BNEP is not set
+CONFIG_BT_SCO=y
+CONFIG_BT_RFCOMM=y
+CONFIG_BT_RFCOMM_TTY=y
+CONFIG_BT_BNEP=y
+# CONFIG_BT_BNEP_MC_FILTER is not set
+# CONFIG_BT_BNEP_PROTO_FILTER is not set
 CONFIG_BT_HIDP=y
 
 #
@@ -1069,7 +1073,12 @@ CONFIG_BT_HIDP=y
 # CONFIG_BT_HCISMD is not set
 # CONFIG_BT_HCIBTUSB is not set
 # CONFIG_BT_HCIBTSDIO is not set
-# CONFIG_BT_HCIUART is not set
+CONFIG_BT_HCIUART=y
+CONFIG_BT_HCIUART_H4=y
+# CONFIG_BT_HCIUART_BCSP is not set
+# CONFIG_BT_HCIUART_ATH3K is not set
+# CONFIG_BT_HCIUART_LL is not set
+# CONFIG_BT_HCIUART_IBS is not set
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
 # CONFIG_BT_MSM_SLEEP is not set
@@ -1233,9 +1242,8 @@ CONFIG_HAVE_IDE=y
 #
 CONFIG_SCSI_MOD=y
 # CONFIG_RAID_ATTRS is not set
-CONFIG_SCSI=y
-CONFIG_SCSI_DMA=y
-# CONFIG_SCSI_TGT is not set
+# CONFIG_SCSI is not set
+# CONFIG_SCSI_DMA is not set
 # CONFIG_SCSI_NETLINK is not set
 CONFIG_SCSI_PROC_FS=y
 
@@ -1385,9 +1393,9 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ATMEL_DETECT_USB_VBUS is not set
 # CONFIG_TOUCHSCREEN_ATMEL_WLS is not set
 CONFIG_TOUCHSCREEN_ATMEL=y
-CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE=y
+# CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE is not set
 # CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_DISABLED is not set
-CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_ENABLED=y
+# CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_ENABLED is not set
 # CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_ENABLED_WITH_BACKLIGHT is not set
 # CONFIG_TOUCHSCREEN_NTRIG is not set
 # CONFIG_TOUCHSCREEN_ATMEL_224E is not set
@@ -1495,7 +1503,7 @@ CONFIG_SERIAL_MSM_HS=y
 # CONFIG_SERIAL_MSM_HS_IMC is not set
 CONFIG_SERIAL_MSM_HSL=y
 CONFIG_SERIAL_MSM_HSL_CONSOLE=y
-# CONFIG_SERIAL_BCM_BT_LPM is not set
+CONFIG_SERIAL_BCM_BT_LPM=y
 # CONFIG_SERIAL_TIMBERDALE is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
 # CONFIG_SERIAL_ALTERA_UART is not set
@@ -1799,7 +1807,7 @@ CONFIG_THERMAL_PM8901=y
 # CONFIG_THERMAL_PM8058 is not set
 # CONFIG_THERMAL_MSM_POPMEM is not set
 CONFIG_THERMAL_TSENS=y
-# CONFIG_THERMAL_TSENS8960 is not set
+# CONFIG_THERMAL_TSENS8x60 is not set
 # CONFIG_THERMAL_PM8XXX is not set
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
