--- a/arch/arm/configs/my_defconfig
+++ b/arch/arm/configs/my_defconfig
@@ -44,7 +44,7 @@ CONFIG_KERNEL_GZIP=y
 # CONFIG_KERNEL_LZMA is not set
 # CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-# CONFIG_SWAP is not set
+CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
@@ -2652,8 +2652,15 @@ CONFIG_ANDROID_EVENTS_LOG_SIZE=256
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
+CONFIG_SNAPPY_COMPRESS=y
+CONFIG_SNAPPY_DECOMPRESS=y
 CONFIG_XVMALLOC=y
 CONFIG_ZRAM=y
+CONFIG_ZRAM_NUM_DEVICES=1
+CONFIG_ZRAM_DEFAULT_DISKSIZE=100663296
+# CONFIG_ZRAM_DEBUG is not set
+# CONFIG_ZRAM_LZO is not set
+CONFIG_ZRAM_SNAPPY=y
 # CONFIG_ZRAM_DEBUG is not set
 # CONFIG_FB_SM7XX is not set
 CONFIG_MACH_NO_WESTBRIDGE=y
