--- a/arch/arm/configs/my_defconfig
+++ b/arch/arm/configs/my_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.41 Kernel Configuration
+# Linux/arm 3.0.42.10 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -97,7 +97,7 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
-CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=5
@@ -407,10 +407,10 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
-# CONFIG_MSM_MPDEC is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
+# CONFIG_MSM_MPDEC is not set
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1512000
+CONFIG_MSM_CPU_FREQ_MAX=1188000
 CONFIG_MSM_CPU_FREQ_MIN=192000
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
@@ -600,6 +600,7 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 # CONFIG_ARCH_ENABLE_MEMORY_HOTPLUG is not set
 # CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
+CONFIG_ALIGNMENT_TRAP=y
 CONFIG_ALLOW_CPU_ALIGNMENT=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
 # CONFIG_SECCOMP is not set
@@ -656,30 +657,17 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_LAZY=y
-CONFIG_CPU_FREQ_GOV_LAGFREE=y
-CONFIG_LAGFREE_MAX_LOAD=80
-CONFIG_LAGFREE_MIN_LOAD=20
-CONFIG_LAGFREE_FREQ_STEP_DOWN=108000
-CONFIG_LAGFREE_FREQ_SLEEP_MAX=384000
-CONFIG_LAGFREE_FREQ_AWAKE_MIN=384000
-CONFIG_LAGFREE_FREQ_STEP_UP_SLEEP_PERCENT=20
-CONFIG_CPU_FREQ_GOV_BADASS=y
-CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE=y
-CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE_FREQ=918000
-CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE=y
-CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE_FREQ=1188000
-CONFIG_CPU_FREQ_GOV_BADASS_GPU_CONTROL=y
-# CONFIG_CPU_FREQ_GOV_BADASS_LOWBAT_POWERSAVE is not set
-# CONFIG_CPU_FREQ_GOV_BADASS_ALLOW_BYPASS is not set
+# CONFIG_CPU_FREQ_GOV_LAGFREE is not set
+# CONFIG_CPU_FREQ_GOV_BADASS is not set
 CONFIG_CPU_FREQ_MIN_TICKS=10
 CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=2000
-CONFIG_CPU_FREQ_GOV_SAVAGEDZEN=y
-CONFIG_CPU_FREQ_GOV_LIONHEART=y
-CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
+# CONFIG_CPU_FREQ_GOV_SAVAGEDZEN is not set
+# CONFIG_CPU_FREQ_GOV_LIONHEART is not set
+# CONFIG_CPU_FREQ_GOV_LULZACTIVE is not set
 CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
-CONFIG_CPU_FREQ_GOV_WHEATLEY=y
-CONFIG_CPU_FREQ_GOV_SCARY=y
-CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
+# CONFIG_CPU_FREQ_GOV_WHEATLEY is not set
+# CONFIG_CPU_FREQ_GOV_SCARY is not set
+# CONFIG_CPU_FREQ_GOV_PEGASUSQ is not set
 CONFIG_CPU_FREQ_DVFS_MONITOR=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
@@ -1244,40 +1232,6 @@ CONFIG_SCSI_MOD=y
 # CONFIG_SCSI is not set
 # CONFIG_SCSI_DMA is not set
 # CONFIG_SCSI_NETLINK is not set
-CONFIG_SCSI_PROC_FS=y
-
-#
-# SCSI support type (disk, tape, CD-ROM)
-#
-CONFIG_BLK_DEV_SD=y
-# CONFIG_CHR_DEV_ST is not set
-# CONFIG_CHR_DEV_OSST is not set
-# CONFIG_BLK_DEV_SR is not set
-# CONFIG_CHR_DEV_SG is not set
-# CONFIG_CHR_DEV_SCH is not set
-# CONFIG_SCSI_MULTI_LUN is not set
-# CONFIG_SCSI_CONSTANTS is not set
-# CONFIG_SCSI_LOGGING is not set
-# CONFIG_SCSI_SCAN_ASYNC is not set
-CONFIG_SCSI_WAIT_SCAN=m
-
-#
-# SCSI Transports
-#
-# CONFIG_SCSI_SPI_ATTRS is not set
-# CONFIG_SCSI_FC_ATTRS is not set
-# CONFIG_SCSI_ISCSI_ATTRS is not set
-# CONFIG_SCSI_SAS_ATTRS is not set
-# CONFIG_SCSI_SAS_LIBSAS is not set
-# CONFIG_SCSI_SRP_ATTRS is not set
-CONFIG_SCSI_LOWLEVEL=y
-# CONFIG_ISCSI_TCP is not set
-# CONFIG_ISCSI_BOOT_SYSFS is not set
-# CONFIG_LIBFC is not set
-# CONFIG_LIBFCOE is not set
-# CONFIG_SCSI_DEBUG is not set
-# CONFIG_SCSI_DH is not set
-# CONFIG_SCSI_OSD_INITIATOR is not set
 # CONFIG_ATA is not set
 CONFIG_MD=y
 # CONFIG_BLK_DEV_MD is not set
@@ -1393,9 +1347,6 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ATMEL_WLS is not set
 CONFIG_TOUCHSCREEN_ATMEL=y
 # CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE is not set
-# CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_DISABLED is not set
-# CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_ENABLED is not set
-# CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_ENABLED_WITH_BACKLIGHT is not set
 # CONFIG_TOUCHSCREEN_NTRIG is not set
 # CONFIG_TOUCHSCREEN_ATMEL_224E is not set
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
@@ -2779,7 +2730,8 @@ CONFIG_NETWORK_FILESYSTEMS=y
 CONFIG_CIFS=y
 # CONFIG_CIFS_STATS is not set
 # CONFIG_CIFS_WEAK_PW_HASH is not set
-# CONFIG_CIFS_XATTR is not set
+CONFIG_CIFS_XATTR=y
+# CONFIG_CIFS_POSIX is not set
 # CONFIG_CIFS_DEBUG2 is not set
 # CONFIG_NCP_FS is not set
 # CONFIG_CODA_FS is not set
