--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -180,9 +180,9 @@ config CPU_FREQ_DEFAULT_GOV_LULZACTIVE
 config CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND
 	bool "intellidemand"
 	select CPU_FREQ_GOV_INTELLIDEMAND
+	select CPU_FREQ_GOV_PERFORMANCE
 	help
-	  Use the CPUFreq governor 'intellidemand' as default. This is
-	  based on Ondemand with browsing detection based on GPU loading
+		Use the CPUFreq governor 'intellidemand' as default.
 
 config CPU_FREQ_DEFAULT_GOV_WHEATLEY
 	bool "wheatley"
@@ -260,17 +260,11 @@ config CPU_FREQ_GOV_ONDEMAND
 	  If in doubt, say N.
 
 config CPU_FREQ_GOV_ONDEMAND_2_PHASE
- 	tristate "'2-phase' power-efficiency ondemand algorithm"
-	depends on CPU_FREQ_GOV_ONDEMAND || CPU_FREQ_GOV_INTELLIDEMAND
- 	help
- 	  '2-phase' - This driver adds a new algo to save power
-
-config CPUFREQ_LIMIT_MAX_FREQ
-	bool "Limit Max Freq"
-	depends on CPU_FREQ_GOV_INTELLIDEMAND
+	tristate "'2-phase' power-efficiency ondemand algorithm"
+	depends on CPU_FREQ_GOV_ONDEMAND
 	help
-		Limit Max Freq while screen is on for Intellidemand governor
- 
+	  '2-phase' - This driver adds a new algo to save power
+
 config CPU_FREQ_GOV_ONDEMANDX
 	tristate "'ondemandx' cpufreq policy governor"
 	select CPU_FREQ_TABLE
@@ -498,36 +492,8 @@ config CPU_FREQ_GOV_LULZACTIVE
 		If in doubt, say N.
 
 config CPU_FREQ_GOV_INTELLIDEMAND
-        tristate "'intellidemand' cpufreq policy governor"
-        select CPU_FREQ_TABLE
-        help
-          'intellidemand' - This driver adds a dynamic cpufreq policy governor.
-          The governor does a periodic polling and
-          changes frequency based on the CPU utilization.
-          The support for this governor depends on CPU capability to
-          do fast frequency switching (i.e, very low latency frequency
-          transitions). with browsing detection based on GPU loading
-
-          To compile this driver as a module, choose M here: the
-          module will be called cpufreq_ondemand.
-
-          For details, take a look at linux/Documentation/cpu-freq.
-
-          If in doubt, say N.
-
-config INTELLI_MAX_ACTIVE_FREQ
-	int "Max Active Freq for Intellidemand"
-	depends on CPU_FREQ_GOV_INTELLIDEMAND
-	default	1512000
-	help
-		Set default max active frequency for intellidemand
-
-config INTELLI_MAX_INACTIVE_FREQ
-	int "Max Inactive Freq for Intellidemand"
-	depends on CPU_FREQ_GOV_INTELLIDEMAND
-	default	1134000
-	help
-		Set default max inactive frequency for intellidemand
+	tristate "'intellidemand' cpufreq governor"
+	depends on CPU_FREQ
 
 config CPU_FREQ_GOV_WHEATLEY
 	tristate "'wheatley' cpufreq governor"
